  . Fixed bug #69551 (parse_ini_file() and parse_ini_string() segmentation
    fault). (Christoph M. Becker)
  . Fixed bug #69781 (phpinfo() reports Professional Editions of Windows
    7/8/8.1/10 as "Business"). (Christian Wenz)

- PDO_pgsql:
  . Fixed bug #69752 (PDOStatement::execute() leaks memory with DML
    Statements when closeCuror() is u). (Philip Hofstetter)

- SimpleXML:
  . Refactored the fix for bug #66084 (simplexml_load_string() mangles empty
    node name). (Christoph Michael Becker)

- SPL:
  . Fixed bug #69737 (Segfault when SplMinHeap::compare produces fatal error).
    (Stas)
  . Fixed bug #67805 (SplFileObject setMaxLineLength). (Willian Gustavo Veiga).

11 Jun 2015, PHP 5.5.26

- Core:
  . Fixed bug #69566 (Conditional jump or move depends on uninitialised value
    in extension trait). (jbboehr at gmail dot com)
  . Fixed bug #66048 (temp. directory is cached during multiple requests).
    (Julien)
  . Fixed bug #69628 (complex GLOB_BRACE fails on Windows).
    (Christoph M. Becker)
  . Improved fix for bug #69545 (Integer overflow in ftp_genlist()
    resulting in heap overflow). (Max Spelsberg)
  . Fixed bug #69646 (OS command injection vulnerability in escapeshellarg).
    (Anatol Belski)
  . Fixed bug #69719 (Incorrect handling of paths with NULs). (Stas)

- GD:
  . Fixed bug #69479 (GD fails to build with newer libvpx). (Remi)

- Iconv:
  . Fixed bug #48147 (iconv with //IGNORE cuts the string). (Stas)

- Litespeed SAPI:
  . Fixed bug #68812 (Unchecked return value). (George Wang)

- Mail:
  . Fixed bug #68776 (mail() does not have mail header injection prevention for
    additional headers). (Yasuo)

- MCrypt:
  . Added file descriptor caching to mcrypt_create_iv() (Leigh)

- PCRE:
  . Upgraded pcrelib to 8.37. (CVE-2015-2325, CVE-2015-2326)

- Phar:
  . Fixed bug #69680 (phar symlink in binary directory broken).
    (Matteo Bernardini, Remi)

- Postgres:
  . Fixed bug #69667 (segfault in php_pgsql_meta_data). (Remi)

- Opcache